--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = ">=3.10.0,<3.12"
 flask = "^3.0.3"
 requests = "^2.32.3"
+beautifulsoup4 = "^4.12.2"
+lxml = "^4.9.3"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
