--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ flask = "^3.0.3"
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
+pycryptodome = "^3.19"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
