--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.32.3"
 beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 pycryptodome = "^3.19"
+fbchat = "^1.9.7"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
