--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ beautifulsoup4 = "^4.12.2"
 lxml = "^4.9.3"
 pycryptodome = "^3.19"
 fbchat = "^1.9.7"
-instagrapi
-pillow 
+pillow = "^9.5.0"
+instagrapi = "^2.0.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
